--- a/conf/linked.data.gov.au/org/tern.conf
+++ b/conf/linked.data.gov.au/org/tern.conf
@@ -130,6 +130,39 @@ RewriteRule ^\/dataset\/bdbsa(.*).owl$ https://linkeddata.tern.org.au/api/v1.0/v
 RewriteRule ^/dataset/bdbsa(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/bdbsa$1&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
 
 
+# https://linked.data.gov.au/dataset/three-parks-savanna
+# Dataset
+# Turtle
+RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^\/dataset\/three-parks-savanna(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+RewriteRule ^\/dataset\/three-parks-savanna(.*).ttl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+# RDF/XML
+RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
+RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
+RewriteRule ^\/dataset\/three-parks-savanna(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/rdf+xml [R=302,L]
+RewriteRule ^\/dataset\/three-parks-savanna(.*).rdf$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/rdf+xml [R=302,L]
+# N-Triples
+RewriteCond %{QUERY_STRING} ^_format=application/n-triples$ [OR]
+RewriteCond %{HTTP:Accept} application/n-triples [NC]
+RewriteRule ^\/dataset\/three-parks-savanna(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/n-triples [R=302,L]
+RewriteRule ^\/dataset\/three-parks-savanna(.*).nt$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/n-triples [R=302,L]
+# JSON-LD
+RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
+RewriteCond %{HTTP:Accept} application/ld\+json [NC]
+RewriteRule ^\/dataset\/three-parks-savanna(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/ld+json [R=302,L]
+RewriteRule ^\/dataset\/three-parks-savanna(.*).jsonld$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/ld+json [R=302,L]
+# Notation3
+RewriteCond %{QUERY_STRING} ^_format=text/n3$ [OR]
+RewriteCond %{HTTP:Accept} text/n3 [NC]
+RewriteRule ^\/dataset\/three-parks-savanna(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/n3 [R=302,L]
+RewriteRule ^\/dataset\/three-parks-savanna(.*).n3$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/n3 [R=302,L]
+# .owl file extension
+RewriteRule ^\/dataset\/three-parks-savanna(.*).owl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+# HTML
+RewriteRule ^/dataset/three-parks-savanna(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/three-parks-savanna$1&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
+
+
 # https://linked.data.gov.au/dataset/bioregion
 RewriteRule ^/dataset/bioregion$                              https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/IBRA7 [R=302,QSA,L]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
