add a few TERN tests

--- a/conf/linked.data.gov.au/org/tern.conf
+++ b/conf/linked.data.gov.au/org/tern.conf
@@ -270,5 +270,9 @@ RewriteRule ^/def/plot(.*)$                             https://ternaustralia.gi
 
 
 # https://linked.data.gov.au/def/tern-cv
-RewriteRule ^/def/tern-cv/$                             https://linkeddata.tern.org.au/viewer/tern/vocabulary/ [R=302,L]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/tern-cv(.*)$                          https://linkeddata.tern.org.au/viewer/tern/vocabulary/?_view=reg&_format=text/turtle&uri=https://linkeddata.tern.org.au/viewer/tern/vocabulary/ [R=303,L]
+RewriteRule ^/def/tern-cv(.*).ttl$                      https://linkeddata.tern.org.au/viewer/tern/vocabulary/?_view=reg&_format=text/turtle&uri=https://linkeddata.tern.org.au/viewer/tern/vocabulary/ [R=303,L]
+RewriteRule ^/def/tern-cv$                              https://linkeddata.tern.org.au/viewer/tern/vocabulary/ [R=302,L]
 RewriteRule ^/def/tern-cv(.*)$                          https://linkeddata.tern.org.au/viewer/tern/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
