--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -767,18 +767,18 @@ RewriteRule ^/def/geofeatures.ttl(.*)$                  https://raw.githack.com/
 
 # profile: OWL, mediatype: (default) HTML
 RewriteMap lc int:tolower
-RewriteRule ^/def/geofeatures/(.*)$                      https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/geofeatures.html#${lc:$1} [R=302,L,NE]
+RewriteRule ^/def/geofeatures/(.*)$                     https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/geofeatures.html#${lc:$1} [R=302,L,NE]
 RewriteRule ^/def/geofeatures(.*)$                      https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/geofeatures.html$1 [R=302,L]
 
 
 # https://linked.data.gov.au/def/geoadminfeatures
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/geoadminfeatures                     https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.ttl? [R=302,L]
-RewriteRule ^/def/geoadminfeatures.ttl$                https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.ttll [R=302,L]
-RewriteRule ^/def/geoadminfeatures(.*)$                https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.html$1 [R=302,L]
+RewriteRule ^/def/geoadminfeatures                      https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.ttl? [R=302,L]
+RewriteRule ^/def/geoadminfeatures.ttl$                 https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.ttll [R=302,L]
+RewriteRule ^/def/geoadminfeatures(.*)$                 https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.html$1 [R=302,L]
 
 # https://linked.data.gov.au/def/geochem
-RewriteRule ^/def/geochem$				https://kurrawong.github.io/gsq-geochem-spec/spec.html [R=302,L]
-RewriteRule ^/def/geochem/spec$                         https://kurrawong.github.io/gsq-geochem-spec/spec.html [R=302,L]
-RewriteRule ^/def/geochem/overview$                     https://kurrawong.github.io/gsq-geochem-spec/overview.html [R=302,L]
+RewriteRule ^/def/geochem$				                https://kurrawong.github.io/gsq-geochem/spec.html [R=302,L]
+RewriteRule ^/def/geochem/spec$                         https://kurrawong.github.io/gsq-geochem/spec.html [R=302,L]
+RewriteRule ^/def/geochem/overview$                     https://kurrawong.github.io/gsq-geochem/overview.html [R=302,L]
