/def/geochem - RDF

--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -779,6 +779,9 @@ RewriteRule ^/def/geoadminfeatures.ttl$                 https://raw.githack.com/
 RewriteRule ^/def/geoadminfeatures(.*)$                 https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.html$1 [R=302,L]
 
 # https://linked.data.gov.au/def/geochem
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/geochem$				                https://kurrawong.github.io/gsq-geochem/model.ttl [R=302,L]
 RewriteRule ^/def/geochem$				                https://kurrawong.github.io/gsq-geochem/spec.html [R=302,L]
 RewriteRule ^/def/geochem/spec$                         https://kurrawong.github.io/gsq-geochem/spec.html [R=302,L]
 RewriteRule ^/def/geochem/overview$                     https://kurrawong.github.io/gsq-geochem/overview.html [R=302,L]
