10 new GSWA vocabs; simplified existing GSWA patterns

--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -1,169 +1,41 @@
 # Status note: GSWA's vocab system cannot resolve Turtle data yet, so only HTML redirects are currently in place
 
-# https://linked.data.gov.au/def/australian-physiographic-units
-# ConceptScheme
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/australian-physiographic-units.ttl$
-# RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units" [R=302,NE,L]
-# Concept / Collection
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/australian-physiographic-units/(.*).ttl$
-# RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:Australian-physiographic-units/ns11:$1" [R=302,NE,L]
+RewriteRule ^/def/australian-physiographic-units($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/australian-physiographic-units$1" [R=302,NE,L]
 
+RewriteRule ^/def/borehole-configuration($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-configuration$1" [R=302,NE,L]
 
-# https://linked.data.gov.au/def/borehole-configuration
-# ConceptScheme
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/borehole-configuration.ttl$
-# RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration" [R=302,NE,L]
-# Concept / Collection
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/borehole-configuration/(.*).ttl$
-# RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration/brhl-cnfgrtn:$1" [R=302,NE,L]
+RewriteRule ^/def/borehole-geometry($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-geometry$1" [R=302,NE,L]
 
+RewriteRule ^/def/borehole-start-point-setting($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-start-point-setting$1" [R=302,NE,L]
 
-# https://linked.data.gov.au/def/borehole-start-point-setting
-# ConceptScheme
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/borehole-start-point-setting$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/borehole-start-point-setting.ttl$
-# RewriteRule ^/def/borehole-start-point-setting$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-start-point-setting$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting" [R=302,NE,L]
-# Concept / Collection
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/borehole-start-point-setting/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/borehole-start-point-setting/(.*).ttl$
-# RewriteRule ^/def/borehole-start-point-setting/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-start-point-setting/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting/ns12:$1" [R=302,NE,L]
+RewriteRule ^/def/CRIRSCO-mineral-resource-reporting($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/CRIRSCO-mineral-resource-reporting$1" [R=302,NE,L]
 
+RewriteRule ^/def/dmirs-offices($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/dmirs-offices$1" [R=302,NE,L]
 
-# https://linked.data.gov.au/def/dmirs-offices
-# ConceptScheme
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/dmirs-offices$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/dmirs-offices.ttl$
-# RewriteRule ^/def/dmirs-offices$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/dmirs-offices$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices" [R=302,NE,L]
-# Concept / Collection
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/dmirs-offices/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/dmirs-offices/(.*).ttl$
-# RewriteRule ^/def/dmirs-offices/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/dmirs-offices/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices/brhl-cnfgrtn:$1" [R=302,NE,L]
+RewriteRule ^/def/geological-feature-type($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/geological-feature-type$1" [R=302,NE,L]
 
+RewriteRule ^/def/gswa-collection-facilities($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/gswa-collection-facilities$1" [R=302,NE,L]
 
-# https://linked.data.gov.au/def/geological-feature-type
-# ConceptScheme
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/geological-feature-type$ "https://gswa.dev.kurrawong.ai/v/vocab/def:geological-feature-type?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/geological-feature-type.ttl$
-# RewriteRule ^/def/geological-feature-type$ "https://gswa.dev.kurrawong.ai/v/vocab/def:geological-feature-type?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/geological-feature-type$ "https://gswa.dev.kurrawong.ai/v/vocab/def:geological-feature-type" [R=302,NE,L]
-# Concept / Collection
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/geological-feature-type/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:geological-feature-type/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/geological-feature-type/(.*).ttl$
-# RewriteRule ^/def/geological-feature-type/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:geological-feature-type/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/geological-feature-type/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:geological-feature-type/ns9:$1" [R=302,NE,L]
+RewriteRule ^/def/JORC-Code($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/JORC-Code$1" [R=302,NE,L]
 
-# https://linked.data.gov.au/def/gswa-collection-facilities
-# ConceptScheme
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/gswa-collection-facilities$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/gswa-collection-facilities.ttl$
-# RewriteRule ^/def/gswa-collection-facilities$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/gswa-collection-facilities$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities" [R=302,NE,L]
-# Concept / Collection
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/gswa-collection-facilities/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/gswa-collection-facilities/(.*).ttl$
-# RewriteRule ^/def/gswa-collection-facilities/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/gswa-collection-facilities/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities/ns10:$1" [R=302,NE,L]
+RewriteRule ^/def/location-method($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/location-method$1" [R=302,NE,L]
 
+RewriteRule ^/def/metamorphic-facies($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/metamorphic-facies$1" [R=302,NE,L]
 
-# https://linked.data.gov.au/def/physiographic-unit-types
-# ConceptScheme
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/physiographic-unit-types$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/physiographic-unit-types.ttl$
-# RewriteRule ^/def/physiographic-unit-types$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/physiographic-unit-types$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types" [R=302,NE,L]
-# Concept / Collection
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/physiographic-unit-types/(.*).ttl$
-# RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types/ns13:$1" [R=302,NE,L]
+RewriteRule ^/def/metamorphic-P-T-trajectory($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/metamorphic-P-T-trajectory$1" [R=302,NE,L]
 
+RewriteRule ^/def/metamorphic-stage($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/metamorphic-stage$1" [R=302,NE,L]
 
-# https://linked.data.gov.au/def/vertical-depth-reference-systems
-# ConceptScheme
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/vertical-depth-reference-systems$ "https://gswa.dev.kurrawong.ai/v/vocab/def:vertical-depth-reference-systems?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/vertical-depth-reference-systems.ttl$
-# RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/def:vertical-depth-reference-systems?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/vertical-depth-reference-systems$ "https://gswa.dev.kurrawong.ai/v/vocab/def:vertical-depth-reference-systems" [R=302,NE,L]
-# Concept / Collection
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/vertical-depth-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:vertical-depth-reference-systems/w-crdnt-rfrnc-systm:$1?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/vertical-depth-reference-systems/(.*).ttl$
-# RewriteRule ^/def/vertical-depth-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:vertical-depth-reference-systems/w-crdnt-rfrnc-systm:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/vertical-depth-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:vertical-depth-reference-systems/ns14:$1" [R=302,NE,L]
+RewriteRule ^/def/metamorphic-thermal-regime($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/metamorphic-thermal-regime$1" [R=302,NE,L]
 
+RewriteRule ^/def/physiographic-unit-types($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/physiographic-unit-types$1" [R=302,NE,L]
 
-# https://linked.data.gov.au/def/wa-coordinate-reference-systems
-# ConceptScheme
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/wa-coordinate-reference-systems$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-systems?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/wa-coordinate-reference-systems.ttl$
-# RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-systems?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-coordinate-reference-systems$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-systems" [R=302,NE,L]
-# Concept / Collection
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/wa-coordinate-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-systems/w-crdnt-rfrnc-systm:$1?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/wa-coordinate-reference-systems/(.*).ttl$
-# RewriteRule ^/def/wa-coordinate-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-systems/w-crdnt-rfrnc-systm:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-coordinate-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-systems/ns6:$1" [R=302,NE,L]
+RewriteRule ^/def/tectonic-unit-type($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/tectonic-unit-type$1" [R=302,NE,L]
 
+RewriteRule ^/def/uom-geoscience($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/uom-geoscience$1" [R=302,NE,L]
 
-# https://linked.data.gov.au/def/wa-mineral-fields-and-districts
-# ConceptScheme
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/wa-mineral-fields-and-districts.ttl$
-# RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts" [R=302,NE,L]
-# Concept / Collection
-# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/wa-mineral-fields-and-districts/(.*).ttl$
-# RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts/ns7:$1" [R=302,NE,L]
+RewriteRule ^/def/vertical-depth-reference-systems($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/vertical-depth-reference-systems$1" [R=302,NE,L]
+
+RewriteRule ^/def/wa-coordinate-reference-systems($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/wa-coordinate-reference-systems$1" [R=302,NE,L]
+
+RewriteRule ^/def/wa-mineral-fields-and-districts($|/.*) "https://gswa.dev.kurrawong.ai/object?uri=https://linked.data.gov.au/def/wa-mineral-fields-and-districts$1" [R=302,NE,L]
