Fix in some rules (missed to update the endpoints to Virtuoso)

--- a/conf/linked.data.gov.au/org/tern.conf
+++ b/conf/linked.data.gov.au/org/tern.conf
@@ -28,7 +28,7 @@ RewriteRule ^\/dataset\/ausplots(.*).n3$ https://linkeddata.tern.org.au/api/v1.0
 # .owl file extension
 RewriteRule ^\/dataset\/ausplots(.*).owl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/ausplots$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=text/turtle [R=302,L]
 # HTML
-RewriteRule ^/dataset/ausplots(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/ausplots$1&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
+RewriteRule ^/dataset/ausplots(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/ausplots$1&sparql_endpoint=https://virtuoso.tern.org.au/sparql [R=302,L]
 
 
 # https://linked.data.gov.au/dataset/tern-ecosystem-processes
@@ -61,7 +61,7 @@ RewriteRule ^\/dataset\/tern-ecosystem-processes(.*).n3$ https://linkeddata.tern
 # .owl file extension
 RewriteRule ^\/dataset\/tern-ecosystem-processes(.*).owl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=text/turtle [R=302,L]
 # HTML
-RewriteRule ^/dataset/tern-ecosystem-processes(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
+RewriteRule ^/dataset/tern-ecosystem-processes(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1&sparql_endpoint=https://virtuoso.tern.org.au/sparql [R=302,L]
 
 
 # https://linked.data.gov.au/dataset/wet-tropics-vertebrate
@@ -94,7 +94,7 @@ RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*).n3$ https://linkeddata.tern.o
 # .owl file extension
 RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*).owl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=text/turtle [R=302,L]
 # HTML
-RewriteRule ^/dataset/wet-tropics-vertebrate(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
+RewriteRule ^/dataset/wet-tropics-vertebrate(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1&sparql_endpoint=https://virtuoso.tern.org.au/sparql [R=302,L]
 
 
 # https://linked.data.gov.au/dataset/bdbsa
@@ -127,7 +127,7 @@ RewriteRule ^\/dataset\/bdbsa(.*).n3$ https://linkeddata.tern.org.au/api/v1.0/vi
 # .owl file extension
 RewriteRule ^\/dataset\/bdbsa(.*).owl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=text/turtle [R=302,L]
 # HTML
-RewriteRule ^/dataset/bdbsa(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/bdbsa$1&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
+RewriteRule ^/dataset/bdbsa(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/bdbsa$1&sparql_endpoint=https://virtuoso.tern.org.au/sparql [R=302,L]
 
 
 # https://linked.data.gov.au/dataset/three-parks-savanna
@@ -245,7 +245,7 @@ RewriteRule ^\/dataset\/corveg(.*).n3$ https://linkeddata.tern.org.au/api/v1.0/v
 # .owl file extension
 RewriteRule ^\/dataset\/corveg(.*).owl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/corveg$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=text/turtle [R=302,L]
 # HTML
-RewriteRule ^\/dataset\/corveg(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/corveg$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
+RewriteRule ^\/dataset\/corveg(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/corveg$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql [R=302,L]
 
 
 # https://linked.data.gov.au/def/ausplots-cv
