--- a/.github/workflows/out-of-office.yml
+++ b/.github/workflows/out-of-office.yml
@@ -9,13 +9,13 @@ jobs:
   comment:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/github-script@v6
+      - uses: actions/github-script@v7
         with:
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'This is a test of automatically creating a comment triggered by a pull request'
+              body: 'This is an auto-generated reply.\n\nYour pull request has been received.\n\nPlease note: during the holidays, processing of pull requests will be delayed. Normal service is expected to resume on 2024-01-08.'
             })
 
