--- a/.github/workflows/out-of-office.yml
+++ b/.github/workflows/out-of-office.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   comment:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
     steps:
       - uses: actions/github-script@v7
         with:
