--- a/.github/workflows/out-of-office.yml
+++ b/.github/workflows/out-of-office.yml
@@ -1,6 +1,6 @@
 on:
   # Trigger the workflow on push or pull request
-  pull_request_target:
+  pull_request_target
 #    branches:
 #      - master
 #      - develop
