Limit action to opened type
Limit the triggering of the action to the opening of a PR.

--- a/.github/workflows/out-of-office.yml
+++ b/.github/workflows/out-of-office.yml
@@ -1,6 +1,8 @@
 on:
   # Trigger the workflow on push or pull request
-  pull_request_target
+  pull_request_target:
+    types:
+      - opened
 #    branches:
 #      - master
 #      - develop
